# middleware/jwt.go
@@ -1,21 +1,1 @@
 package middleware
-
-import (
-	"hackathon/services"
-	"net/http"
-
-	"github.com/golang-jwt/jwt/v5"
-	echojwt "github.com/labstack/echo-jwt/v4"
-	"github.com/labstack/echo/v4"
-)
-
-func JWTMiddleware(secret string) echo.MiddlewareFunc {
-	config := echojwt.Config{
-		NewClaimsFunc: func(c echo.Context) jwt.Claims { return new(services.JwtCustomClaims) },
-		SigningKey:    []byte(secret),
-		ErrorHandler: func(c echo.Context, err error) error {
-			return c.JSON(http.StatusUnauthorized, echo.Map{"error": "Missing or invalid token"})
-		},
-	}
-	return echojwt.WithConfig(config)
-}
